# ai-portfolio-naol

./: README.md
pdf-study-buddy/: README.md  pyproject.toml
pdf-study-buddy/src/pdf-study-buddy/: __init__.py
