[project]
name = "pdf-study-buddy"
version = "0.1.0"
description = "lanchain project"
authors = [
    {name = "naolt",email = "naoltamrat11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
